// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`MenuLink renders correctly with hidden nodes 1`] = `
<div>
  <div
    css={
      Object {
        "map": undefined,
        "name": "xmrkwo",
        "next": undefined,
        "styles": "
            
    padding: 15px 0px;
  ;
            display: flex;
            padding-left: 20px;
            padding-right: 20px;
          ",
      }
    }
  >
    <a
      className="Menu-major-item-Style"
      css={
        Object {
          "map": undefined,
          "name": "gujogz",
          "next": undefined,
          "styles": "
              text-decoration: none;
              flex-grow: 1;
            ",
        }
      }
      href="basic"
    >
      basic
    </a>
    <div
      className="Menu-major-item-Style"
      css={
        Object {
          "map": undefined,
          "name": "eheuf0",
          "next": undefined,
          "styles": "
                padding: 0px 30px;
              ",
        }
      }
      data-testid="toggle-button"
      onClick={[Function]}
    >
      <span>
        +
      </span>
    </div>
  </div>
</div>
`;

exports[`MenuLink renders correctly without hidden nodes 1`] = `
<div>
  <div
    css={
      Object {
        "map": undefined,
        "name": "xmrkwo",
        "next": undefined,
        "styles": "
            
    padding: 15px 0px;
  ;
            display: flex;
            padding-left: 20px;
            padding-right: 20px;
          ",
      }
    }
  >
    <a
      className="Menu-major-item-Style"
      css={
        Object {
          "map": undefined,
          "name": "gujogz",
          "next": undefined,
          "styles": "
              text-decoration: none;
              flex-grow: 1;
            ",
        }
      }
      href="basic"
    >
      basic
    </a>
  </div>
</div>
`;
